src/test/deca/context/invalid/provided/testi25.deca
class A{}
{
    A a = new int();
}